--- a/styles/main.css
+++ b/styles/main.css
@@ -54,6 +54,7 @@
   position: relative;
 }
 
+/* FIXED: Only ONE spinner ring */
 .spinner-ring {
   width: 60px;
   height: 60px;
@@ -62,29 +63,6 @@
   border-right: 3px solid #0078d4;
   border-radius: 50%;
   animation: spin 1.5s linear infinite;
-  position: absolute;
-}
-
-.spinner-ring:nth-child(1) {
-  animation-delay: 0s;
-  border-top-color: #0078d4;
-  border-right-color: #0078d4;
-}
-
-.spinner-ring:nth-child(2) {
-  animation-delay: 0.2s;
-  width: 40px;
-  height: 40px;
-  border-top-color: #40e0d0;
-  border-right-color: #40e0d0;
-}
-
-.spinner-ring:nth-child(3) {
-  animation-delay: 0.4s;
-  width: 20px;
-  height: 20px;
-  border-top-color: #6effb2;
-  border-right-color: #6effb2;
 }
 
 @keyframes spin {
